@@ -1,3 +1,11 @@
+2007-10-24  Hans Boehm <Hans.Boehm@hp.com>
+
+	* reclaim.c (GC_bytes_found): Expand comment.
+	* thread_local_alloc.c (GC_malloc_atomic, GC_gcj_malloc): Pass
+	granules, not bytes, to GC_FAST_MALLOC_GRANS.
+	* include/gc.h: Never include gc_local_alloc.h.
+	* tests/test.c: Add size zero allocation tests.
+
 2007-10-23  Hans Boehm <Hans.Boehm@hp.com>
 
 	* malloc.c: Update GC_large_allocd_bytes on explicit deallocation.
